Reverted dockerfile test